# peakolator-legacy

./: Makefile  README  config.inc  configure.ac
m4/: cython.m4
src/: Makefile  Makefile.am  annotations.cpp  annotations.hpp  bias_correction.cpp  bias_correction.hpp  common.cpp  common.hpp  context.cpp  context.hpp  dataset.cpp  dataset.hpp  emppval.cpp  emppval.hpp  hash.c  hash.h  intervals.cpp  intervals.hpp  kmers.cpp  kmers.hpp  logger.c  logger.h  miscmath.cpp  miscmath.hpp  model.cpp  model.hpp  mpfr_bindings.hpp  nulldist.cpp  nulldist.hpp  parameters.cpp  parameters.hpp  peakolate  peakolate-assemble  peakolate_seqbias.pyx  peakolator.cpp  peakolator.pxd  peakolator.pyx  peakolator_context.cpp  peakolator_context.hpp  peakolator_dataset.cpp  (+19 more)
src/gmpfrxx/: Makefile  Makefile.am  gmpfrxx.cpp  mpfr_mul_d.c  mpfr_mul_d.h
src/samtools/: Makefile  Makefile.am  samtools.txt
src/yaml-cpp/: Makefile  Makefile.am
