
noinst_LTLIBRARIES = libbam.la

libbam_la_SOURCES = bgzf.c \
					kstring.c \
					bam_aux.c \
					bam.c \
					bam_import.c \
					sam.c \
					bam_index.c \
					bam_pileup.c \
					bam_lpileup.c \
					bam_md.c \
					glf.c \
					razf.c \
					faidx.c \
					knetfile.c \
					bam_sort.c \
					sam_header.c \
					bam_reheader.c \
					bam_tview.c \
					bam_maqcns.c \
					bam_plcmd.c \
					sam_view.c \
					bam_rmdup.c \
					bam_rmdupse.c \
					bam_mate.c \
					bam_stat.c \
					bam_color.c \
					bamtk.c \
					kaln.c \
					bam2bcf.c \
					errmod.c \
					sample.c \
					bcftools/bcf.c \
					bcftools/vcf.c \
					bcftools/bcfutils.c \
					bcftools/prob1.c \
					bcftools/ld.c \
					bcftools/kfunc.c \
					bcftools/index.c \
					bcftools/fet.c \
					bcftools/bcf2qcall.c

libbam_la_CFLAGS = -D_USE_KNETFILE

