
noinst_LTLIBRARIES = libbam.la

libbam_la_SOURCES = bgzf.c \
					kstring.c \
					bam_aux.c \
					bam.c \
					bam_import.c \
					sam.c \
					bam_index.c \
					bam_pileup.c \
					bam_lpileup.c \
					bam_md.c \
					glf.c \
					razf.c \
					faidx.c \
					knetfile.c \
					bam_sort.c \
					sam_header.c \
					bam_reheader.c \
					bam_tview.c \
					bam_maqcns.c \
					bam_plcmd.c \
					sam_view.c \
					bam_rmdup.c \
					bam_rmdupse.c \
					bam_mate.c \
					bam_stat.c \
					bam_color.c \
					bamtk.c \
					kaln.c \
					bam2bcf.c \
					errmod.c \
					sample.c \
					bam2bcf.h \
					bam_endian.h \
					bam.h \
					bam_maqcns.h \
					bgzf.h \
					errmod.h \
					faidx.h \
					glf.h \
					kaln.h \
					khash.h \
					klist.h \
					knetfile.h \
					kseq.h \
					ksort.h \
					kstring.h \
					razf.h \
					sam.h \
					sam_header.h \
					sample.h \
					bcftools/bcf.c \
					bcftools/vcf.c \
					bcftools/bcfutils.c \
					bcftools/prob1.c \
					bcftools/ld.c \
					bcftools/kfunc.c \
					bcftools/index.c \
					bcftools/fet.c \
					bcftools/bcf2qcall.c \
					bcftools/bcf.h \
					bcftools/prob1.h


libbam_la_CFLAGS = -D_USE_KNETFILE

