
noinst_LTLIBRARIES = libyaml-cpp.la

libyaml_cpp_la_SOURCES = \
    aliascontent.cpp \
	conversion.cpp \
	emitter.cpp \
	emitterstate.cpp \
	emitterutils.cpp \
	exp.cpp \
	iterator.cpp \
	map.cpp \
	node.cpp \
	null.cpp \
	ostream.cpp \
	parser.cpp \
	parserstate.cpp \
	regex.cpp \
	scalar.cpp \
	scanner.cpp \
	scanscalar.cpp \
	scantag.cpp \
	scantoken.cpp \
	sequence.cpp \
	simplekey.cpp \
	stream.cpp \
	tag.cpp


