
noinst_LTLIBRARIES = libyaml-cpp.la

libyaml_cpp_la_SOURCES = \
    aliascontent.cpp \
	conversion.cpp \
	emitter.cpp \
	emitterstate.cpp \
	emitterutils.cpp \
	exp.cpp \
	iterator.cpp \
	map.cpp \
	node.cpp \
	null.cpp \
	ostream.cpp \
	parser.cpp \
	parserstate.cpp \
	regex.cpp \
	scalar.cpp \
	scanner.cpp \
	scanscalar.cpp \
	scantag.cpp \
	scantoken.cpp \
	sequence.cpp \
	simplekey.cpp \
	stream.cpp \
	tag.cpp \
	aliascontent.h \
	content.h \
	conversion.h \
	emitter.h \
	emittermanip.h \
	emitterstate.h \
	emitterutils.h \
	exceptions.h \
	exp.h \
	indentation.h \
	iterator.h \
	iterpriv.h \
	ltnode.h \
	map.h \
	mark.h \
	node.h \
	nodeimpl.h \
	nodereadimpl.h \
	nodeutil.h \
	noncopyable.h \
	null.h \
	ostream.h \
	parser.h \
	parserstate.h \
	regex.h \
	regeximpl.h \
	scalar.h \
	scanner.h \
	scanscalar.h \
	scantag.h \
	sequence.h \
	setting.h \
	stlemitter.h \
	stlnode.h \
	streamcharsource.h \
	stream.h \
	stringsource.h \
	tag.h \
	token.h \
	traits.h \
	yaml.h


