
noinst_LTLIBRARIES = libyaml-cpp.la

libyaml_cpp_la_SOURCES = \
	aliasmanager.cpp \
	aliasmanager.h \
	anchor.h \
	collectionstack.h \
	conversion.cpp \
	conversion.h \
	directives.cpp \
	directives.h \
	dll.h \
	emitfromevents.cpp \
	emitfromevents.h \
	emitter.cpp \
	emitter.h \
	emittermanip.h \
	emitterstate.cpp \
	emitterstate.h \
	emitterutils.cpp \
	emitterutils.h \
	eventhandler.h \
	exceptions.h \
	exp.cpp \
	exp.h \
	indentation.h \
	iterator.cpp \
	iterator.h \
	iterpriv.h \
	ltnode.h \
	mark.h \
	nodebuilder.cpp \
	nodebuilder.h \
	node.cpp \
	node.h \
	nodeimpl.h \
	nodeownership.cpp \
	nodeownership.h \
	nodereadimpl.h \
	nodeutil.h \
	noncopyable.h \
	null.cpp \
	null.h \
	ostream.cpp \
	ostream.h \
	parser.cpp \
	parser.h \
	ptr_stack.h \
	ptr_vector.h \
	regex.cpp \
	regex.h \
	regeximpl.h \
	scanner.cpp \
	scanner.h \
	scanscalar.cpp \
	scanscalar.h \
	scantag.cpp \
	scantag.h \
	scantoken.cpp \
	setting.h \
	simplekey.cpp \
	singledocparser.cpp \
	singledocparser.h \
	stlemitter.h \
	stlnode.h \
	streamcharsource.h \
	stream.cpp \
	stream.h \
	stringsource.h \
	tag.cpp \
	tag.h \
	token.h \
	traits.h \
	yaml.h

libyaml_cpp_la_CPPFLAGS = -I..


EXTRA_DIST = COPYING

